fazzk-tauri/src-tauri/build_error_latest.txt
cargo :    Compiling 
fazzk-tauri v0.1.0 (C
:\Users\minse\Desktop
\fazzk-dev\fazzk-taur
i\src-tauri)
위치 줄:1 문자:1
+ cargo build 2>&1 | 
Out-File -FilePath bu
ild_error_latest.txt 
-Encodin ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo   
           : NotSpe  
  cified: (   Comp   
 iling fa...auri\    
src-tauri):Strin    g
) [], RemoteExc    ep
tion
    + FullyQualified 
   ErrorId : Native  
  CommandError
 
warning: unused impor
ts: `Response` and `h
eader`
 --> src\server.rs:3:
30
  |
3 |     response::{In
toResponse, Response,
 Html},
  |                  
            ^^^^^^^^
...
6 |     http::{Method
, StatusCode, header}
,
  |                  
              ^^^^^^
  |
  = note: `#[warn(unu
sed_imports)]` (part 
of `#[warn(unused)]`)
 on by default

error[E0515]: cannot 
return value referenc
ing function paramete
r `v`
  --> src\lib.rs:32:4
4
   |
32 |     let nid_aut_
str = nid_aut.and_the
n(|v| v.as_str()).ok_
or("NID_AUT ?뚯떛 ?ㅽ뙣")
?.to_string();
   |                 
                     
      -^^^^^^^^^
   |                 
                     
      |
   |                 
                     
      returns a value
 referencing data own
ed by the current fun
ction
   |                 
                     
      `v` is borrowed
 here

error[E0515]: cannot 
return value referenc
ing function paramete
r `v`
  --> src\lib.rs:33:4
4
   |
33 |     let nid_ses_
str = nid_ses.and_the
n(|v| v.as_str()).ok_
or("NID_SES ?뚯떛 ?ㅽ뙣")
?.to_string();
   |                 
                     
      -^^^^^^^^^
   |                 
                     
      |
   |                 
                     
      returns a value
 referencing data own
ed by the current fun
ction
   |                 
                     
      `v` is borrowed
 here

warning: unused impor
t: `Manager`
  --> src\server.rs:1
0:24
   |
10 | use tauri::{AppH
andle, Manager, Emitt
er};
   |                 
       ^^^^^^^

warning: unused impor
t: `tauri::Manager`
 --> src\lib.rs:5:5
  |
5 | use tauri::Manage
r;
  |     ^^^^^^^^^^^^^
^

For more information 
about this error, try
 `rustc --explain E05
15`.
warning: `fazzk-tauri
` (lib) generated 3 w
arnings
error: could not comp
ile `fazzk-tauri` (li
b) due to 2 previous 
errors; 3 warnings em
itted
